# SpectralToolbox

./: .gitignore  CMakeLists.txt  Doxyfile  EMD.md  README.md  out
include/: routine.hpp
include/widgets/: file_widget.hpp  mainwindow.hpp  procedure_config_widget.hpp  resultdata.hpp  tracechoose.hpp  tracedata.hpp
lib/common/: CMakeLists.txt
lib/common/include/: description.hpp  proc_config.hpp  proc_config_iface.hpp  procedure_iface.hpp  procedure_info.hpp  reader.hpp  trace.hpp  writer.hpp
lib/common/src/: proc_config.cpp
lib/emd/: CMakeLists.txt
lib/emd/include/: decomposer.h  extremum_searcher.h  spline.h
lib/emd/src/: decomposer.cpp  decomposer_impl.hpp  extremum_searcher.cpp  extremum_searcher_impl.hpp  spline.cpp  spline_impl.hpp
lib/io/: CMakeLists.txt
lib/io/include/: segyreader.hpp  segywriter.hpp
lib/io/src/: segyreader.cpp  segywriter.cpp
lib/matching_pursuit/: CMakeLists.txt
lib/matching_pursuit/impl/: matching_pursuit.hpp
lib/matching_pursuit/include/: matching_pursuit.h
lib/model/: CMakeLists.txt
lib/model/include/: datamodel.hpp  em_decomposer.hpp  idle_decomposer.hpp  mp_decomposer.hpp  procedure_factory.hpp  routine_arg.hpp  spectrum_decomposer_i.hpp
lib/model/src/: datamodel.cpp  em_decomposer.cpp  idle_decomposer.cpp  mp_decomposer.cpp  procedure_factory.cpp
lib/proc/: CMakeLists.txt
lib/spectral_gui/: CMakeLists.txt
lib/spectral_gui/include/: MainWindow.hpp  ui_mainwindow.h
lib/spectral_gui/src/: MainWindow.cpp
lib/spectral_gui/ui/: main.ui
src/: main.cpp  routine.cpp
src/widgets/: file_widget.cpp  file_widget.ui  mainwindow.cpp  mainwindow.ui  procedure_config_widget.cpp  resultdata.cpp  tracechoose.cpp  tracedata.cpp
test/: CMakeLists.txt  test_emd.cpp  test_example.cpp  test_idle.cpp  test_io.cpp  test_mp.cpp
